@@ -1443,5 +1443,24 @@ struct Command {
 #endif
 };
 
+#ifdef THROTTLING
+
+struct ThrottlingBucket
+{
+	struct ThrottlingBucket *next, *prev;
+	struct IN_ADDR	in;
+	time_t		since;
+};
+
+void	init_throttling_hash();
+int	hash_throttling(struct IN_ADDR *in);
+struct	ThrottlingBucket	*find_throttling_bucket(struct IN_ADDR *in);
+void	add_throttling_bucket(struct IN_ADDR *in);
+void	del_throttling_bucket(struct ThrottlingBucket *bucket);
+int	throttle_can_connect(struct IN_ADDR *in);
+
+#endif
+
+
 #endif /* __struct_include__ */
 
